2005-07-22  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (libintl.la, libgnuintl.la): Link with @LTLIBTHREADS@.

2005-07-16  Bruno Haible  <bruno@clisp.org>

	* lock.h (gl_once_t): New type.
	(gl_once_define, gl_once): New macros.
	* lock.c (fresh_once): New variable.
	(glthread_once, glthread_once_call, glthread_once_singlethreaded): New
	functions.

2005-07-16  Bruno Haible  <bruno@clisp.org>

	* lock.h: New file.
	* lock.c: New file.
	* bindtextdom.c: Include lock.h. Don't include THREAD_H. Remove
	definitions of __libc_rwlock_*.
	* finddomain.c: Likewise.
	* textdomain.c: Likewise.
	* dcigettext.c: Include lock.h. Don't include THREAD_H. Remove
	definitions of __libc_lock_*, __libc_rwlock_*.
	* loadmsgcat.c: Include lock.h. Don't include THREAD_H. Remove
	definitions of __libc_lock_*_recursive.
	* localealias.c: Include lock.h. Don't include THREAD_H. Remove
	definitions of __libc_lock_*.
	* log.c: Likewise.
	* Makefile.in (HEADERS): Add lock.h.
	(SOURCES): Add lock.c.
	(OBJECTS): Add lock.$lo.
	(lock.lo): New rule.
	(bindtextdom.$lo, dcigettext.$lo, finddomain.$lo, loadmsgcat.$lo,
	localealias.$lo, lock.$lo, log.$lo): Depend on lock.h.
	* Makefile.msvc (OBJECTS): Add lock.obj.
	(bindtextdom.obj, finddomain.obj, loadmsgcat.obj, localealias.obj,
	dcigettext.obj, log.obj): Depend on lock.h.
	(lock.obj): New rule.
	* Makefile.vms (OBJECTS): Add lock.obj.
	(bindtextdom.obj, finddomain.obj, loadmsgcat.obj, localealias.obj,
	dcigettext.obj, log.obj): Depend on lock.h.
	(lock.obj): New rule.

2005-07-05  Bruno Haible  <bruno@clisp.org>

	* printf-args.c (printf_fetchargs): Work around broken definition of
	wint_t on mingw.

2005-07-02  Bruno Haible  <bruno@clisp.org>

	* localcharset.c (get_charset_aliases) [WIN32]: Add CP65001 and others.
	Reported by <mus1876@gmx.info> via Alain Bench <messtic@oreka.com>.

2005-05-05  Bruno Haible  <bruno@clisp.org>

	Make libintl multithread-safe outside glibc.
	* bindtextdom.c: Include THREAD_H.